--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Ashutosh's Portfolio"
+      name="Ethan Hutchison"
       content="Portfolio content"
     />
     <meta property="og:title" content="Ashutosh Hathidara Portfolio" />
@@ -37,12 +37,12 @@
 
     <!--Adsense Advertisement-->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-8856447829714090",
-        enable_page_level_ads: true
-      });
-    </script>
+<!--    <script>-->
+<!--      (adsbygoogle = window.adsbygoogle || []).push({-->
+<!--        google_ad_client: "ca-pub-8856447829714090",-->
+<!--        enable_page_level_ads: true-->
+<!--      });-->
+<!--    </script>-->
 
     <!-- Global site tag (gtag.js) - Google Ads: 825508380 --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-825508380"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-825508380'); </script>
     <!--
@@ -50,7 +50,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158726526-1"></script>
+<!--    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158726526-1"></script>-->
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
@@ -77,7 +77,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ashutosh's Portfolio</title>
+    <title>Ethan Hutchison</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
