--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
       name="Ethan Hutchison"
       content="Portfolio content"
     />
-    <meta property="og:title" content="Ashutosh Hathidara Portfolio" />
+    <meta property="og:title" content="Ethan Hutchison" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
-    <meta name="description" content="Ashutosh's Personal Portfolio Website" property="og:description">
+    <meta property="og:url" content="https://ethanh.co" />
+    <meta name="description" content="Ethan Hutchison" property="og:description">
     <meta name="description" content="/icons/desc.png" property="og:image">
-    <meta name="keywords" content="Ashutosh, PortFolio, MasterPortfolio, Ashutosh's Portfolio" />
-    <meta name="author" content="Ashutosh" />
-    <meta name="application-name" content="Ashutosh's PortFolio" />
+    <meta name="keywords" content="Ethan Hutchison Portfolio" />
+    <meta name="author" content="Ethan Hutchison" />
+    <meta name="application-name" content="Ethan's PortFolio" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
